fix error run button to image

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -110,39 +110,35 @@
                 android:layout_marginRight="20dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="20dp">
-                <Button
-                    android:layout_width="0dp"
-                    android:layout_height="40dp"
-                    android:layout_weight="1"
-                    android:drawableLeft="@drawable/ic_fb"
-                    android:background=""
-                    android:textColor="@android:color/white"/>
 
-                <Button
-                    android:layout_width="0dp"
-                    android:layout_height="40dp"
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:drawableLeft="@drawable/ic_twitter"
-                    android:background=""
-                    android:text="@string/twitter"
-                    android:textColor="@android:color/white" />
+                    android:src="@drawable/ic_fb"
+                    android:layout_marginRight="8dp"/>
 
-                <Button
-                    android:layout_width="0dp"
-                    android:layout_height="40dp"
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_twitter"
                     android:layout_weight="1"
-                    android:drawableLeft="@drawable/ic_google"
-                    android:background=""
-                    android:text="@string/google"
-                    android:textColor="@android:color/white" />
+                    android:layout_marginRight="8dp"/>
 
-                <Button
-                    android:layout_width="0dp"
-                    android:layout_height="50dp"
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_google"
                     android:layout_weight="1"
-                    android:drawableLeft="@drawable/ic_phone"
-                    android:background=""
-                    android:textColor="@android:color/white" />
+                    android:layout_marginRight="8dp"/>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_phone"
+                    android:layout_weight="1"
+                    android:layout_marginRight="8dp"/>
+
             </LinearLayout>
         </LinearLayout>
 
